<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backImgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:src="@mipmap/ic_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/action_settings"
            android:textColor="@color/c_let_light_bkg"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:paddingRight="10dp"
            android:text="@string/done"
            android:textColor="@color/c_icon_bkg_unsel"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/profile"
            android:textColor="@color/c_let_light_bkg"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="10dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="375dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switchAge"
                    android:layout_width="355dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/noAge" />

                <Switch
                    android:id="@+id/switchDistance"
                    android:layout_width="355dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/noDistance"
                    app:layout_constraintTop_toBottomOf="@+id/switchAge" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--EMAIL PART -->
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:text="@string/email_address"
            android:textColor="@color/c_let_light_bkg"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="375dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switchInvitation"
                    android:layout_width="355dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/eventInv" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!--NOTIFICATION PART -->
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:text="@string/notifications"
            android:textColor="@color/c_let_light_bkg"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="375dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switchFollower"
                    android:layout_width="355dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/newFollower"
                    app:layout_constraintTop_toBottomOf="@+id/switchLike" />

                <Switch
                    android:id="@+id/switchMessage"
                    android:layout_width="355dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/newMsg"
                    app:layout_constraintTop_toBottomOf="@+id/switchFollower" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--CONTACT PART -->
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:text="@string/contact"
            android:textColor="@color/c_let_light_bkg"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="375dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textContact"
                    android:layout_width="355dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/sendEmail" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="202dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraintLayout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/changeLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/changeLang"
            android:textColor="@color/c_icon_bkg_unsel"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/logOut"
            app:layout_constraintEnd_toEndOf="@+id/logOut"
            app:layout_constraintStart_toStartOf="@+id/logOut" />


        <TextView
            android:id="@+id/logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/logOut"
            android:textColor="@color/c_icon_bkg_unsel"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/deleteAccount"
            app:layout_constraintEnd_toEndOf="@+id/deleteAccount"
            app:layout_constraintStart_toStartOf="@+id/deleteAccount" />

        <TextView
            android:id="@+id/deleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/deleteAccount"
            android:textColor="@color/c_icon_bkg_unsel"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>